mask all arrows on inputs type number

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,19 @@ body {
     background-color: var(--background-color);
     font-family: 'Glacial Indifference', sans-serif;
 
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      appearance: none;
+      margin: 0;
+    }
+    
+    @-moz-document url-prefix() {
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
+    }
+
     input {
         font-family: 'Glacial Indifference', sans-serif;
         font-size: 17px;
