--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -195,6 +195,11 @@
             width: 50px;
             height: 50px;
         }
+
+        &-secondline {
+            width: 50px;
+            top: 75px;
+        }
     }
 
     &-zoom {
