--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -19,8 +19,8 @@
     <div class="piece-form">
         <div class="piece-form-title">{{role.intitule ? role.intitule : 'Role '+(i+1)}}</div>
         <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="role.comments.length > 0"></mat-icon>
-        <img src="../../../assets/background-images/role_opacity0.png" draggable="false" *ngIf="i == 0"/>
-        <img src="../../../assets/background-images/role2_opacity0.png" draggable="false" *ngIf="i == 1"/>
+        <img src="./assets/background-images/role_opacity0.png" draggable="false" *ngIf="i == 0"/>
+        <img src="./assets/background-images/role2_opacity0.png" draggable="false" *ngIf="i == 1"/>
         <div class="piece-form-intitule">
             <label for="intitule">Intitulé</label>
             <input name="intitule" type="text" [(ngModel)]="role.intitule" (change)="editTrace($event,'name')" placeholder="Développeur/euse web"
