Minimap using minimap-js/limit zoom/start position/fix some traces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -156,6 +156,7 @@
         matTooltip="Télécharger le manuel d'utilisation."
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"><mat-icon fontIcon="menu_book"></mat-icon></button>
     </div>
+    <div class="container-minimap"></div>
     <div class="container-zoom">
         <button mat-mini-fab color="white" (click)="zoomIn()"
         matTooltip="Zoomer le scénario."
