--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -205,7 +205,7 @@
     &-zoom {
         position: fixed;
         height: 110px;
-        right: 360px;
+        right: 580px;
         bottom: 25px;
         display: flex;
         flex-direction: column;
@@ -220,6 +220,20 @@
                 transform: scale(1.2);
             }
         }
+    }
+
+    &-minimap {
+        position: fixed;
+        height: 200px;
+        width: 200px;
+        z-index: 2;
+        background-color: white;
+        box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+        padding: 5px;
+        border-radius: 10px;
+        bottom: 25px;
+        right: 360px;
+        overflow: scroll;
     }
 }
 
