fix zoom problem / add scroll with directionnal arrow and quick save

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="container-appDragScroll" appDragScroll>
-        <div class="container-appMouseWheelZoom" appMouseWheelZoom>
+    <div class="container-appDragScroll" appDragScroll appMouseWheelZoom>
+        <div class="container-appMouseWheelZoom">
 
             <div class="container-scenario-main">
                 <div class="container-scenario-main-gamePieces" [style.z-index]="4">
