--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,7 +138,7 @@
             <label for="unity">Intégrer le jeu sous Unity (WIP)</label>
         </div>
         <div class="container-settings-mode"
-        matTooltip="Descriptif de chaque élément de RLG Maker."
+        matTooltip="Descriptif de chaque élément du RLG Maker."
         matTooltipPosition="below" [matTooltipDisabled]="!tooltipService.activatedTooltips">
             <input name="tooltip" type="checkbox" [(ngModel)]="tooltipService.activatedTooltips" (change)="tooltipsTrace($event)"/>
             <label for="tooltip">Activer les aides</label>
