--- a/src/app/pieces/tasks/final-task/final-task.component.scss
+++ b/src/app/pieces/tasks/final-task/final-task.component.scss
@@ -139,7 +139,8 @@
         &-form {
             display: flex;
             flex-direction: column;
-            overflow: scroll;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         &-prerequires {
@@ -339,7 +340,7 @@
                 }
 
                 select {
-                    width: 60px;
+                    width: 86px;
                     border-top-left-radius: 0px;
                     border-bottom-left-radius: 0px;
                     z-index: 1;
@@ -362,7 +363,7 @@
         &-interrupt {
             transform: scale(1.2);
             position: absolute;
-            right: 35%;
+            right: 30%;
             bottom: 25px;
             border-radius: 50%;
             background-color: white;
@@ -372,7 +373,7 @@
         &-character {
             transform: scale(1.2);
             position: absolute;
-            left: 45%;
+            left: 50%;
             bottom: 25px;
             border-radius: 50%;
             padding: 4px;
