--- a/src/app/sider-pieces/characters/characters.component.html
+++ b/src/app/sider-pieces/characters/characters.component.html
@@ -3,7 +3,7 @@ matTooltip="Permet d'affecter un ou des personnages précédemment créé(s) à 
 matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-select">
-            <div class="piece-form-title">Affecter un personnage déjà créé</div>
+            <div class="piece-form-title">Affecter un personnage non joueur déjà créé</div>
             <div class="piece-form-select-container">
                 <mat-icon fontIcon="person"></mat-icon>
                 <div class="piece-form-select-container-select">
@@ -18,7 +18,7 @@ matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedToolt
             <button mat-button (click)="assignCharacter()">Sélectionner</button>
         </div>
         <div>
-            <div class="piece-form-title">Personnage(s) utilisé(s)</div>
+            <div class="piece-form-title">Personnage(s) non joueur utilisé(s)</div>
             <div class="piece-form-character-create" *ngFor="let character of task.characters, let index = index">
                 <div class="piece-form-character-create-top">
                     <mat-icon fontIcon="person"></mat-icon>
